--- a/Resources/Prototypes/Imperial/VlMisc/BlackShield/Role/Role.yml
+++ b/Resources/Prototypes/Imperial/VlMisc/BlackShield/Role/Role.yml
@@ -32,6 +32,9 @@
       prototypes: [ BlackShieldGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
+    - type: AutoImplant
+      implants:
+      - MindShieldImplant
     # - type: CrewSkills
     #   skills:
     #     - skillBotany
