--- a/Resources/Prototypes/Entities/Mobs/Player/ShuttleRoles/roles.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/ShuttleRoles/roles.yml
@@ -1195,7 +1195,7 @@
         - skillPiloting
         - skillShooting
 
-# Other
+# Другое
 
 - type: entity
   id: RandomHumanoidVisitorBlackmarketeer
