bluespace liquid now cannot teleport on unquantized values

--- a/Resources/Prototypes/Imperial/Other/ChemistryRework/Reactions/pyrotechnicsReactions.yml
+++ b/Resources/Prototypes/Imperial/Other/ChemistryRework/Reactions/pyrotechnicsReactions.yml
@@ -409,6 +409,7 @@
 - type: reaction
   id: ConcentratedBluespaceLiquidCollapse1
   impact: High
+  quantized: true
   reactants:
     UnstableBluespaceLiquid:
       amount: 1
@@ -425,6 +426,7 @@
   id: ConcentratedBluespaceLiquidCollapse2
   impact: High
   minTemp: 288
+  quantized: true
   reactants:
     ConcentratedBluespaceLiquid:
       amount: 1
