--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
@@ -102,6 +102,7 @@
     reflectProb: 1
     reflects:
       - Energy
+    reflectingInHands: false # Фикс системы, чтобы рефлект отражающего бронежилета работал только тогда, когда он надет в слот взят из ПР Wizard #31902. Автор: BIGZi0348  Imperial Space
 
 - type: entity
   parent: [ClothingOuterBaseLarge, AllowSuitStorageClothing, BaseSyndicateContraband ]
