--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/sword.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/sword.yml
@@ -97,7 +97,9 @@
     slots:
     - Back
     - Belt
-  - type: Reflect
+  - type: Reflect # Фикс системы, чтобы рефлект отражающего бронежилета работал только тогда, когда он надет в слот взят из ПР Wizard #31902. Автор: BIGZi0348  Imperial Space
+    slotFlags:
+      - NONE
 
 - type: entity
   name: machete
