--- a/Resources/Prototypes/Imperial/Other/HairAndTail/fox_part.yml
+++ b/Resources/Prototypes/Imperial/Other/HairAndTail/fox_part.yml
@@ -17,3 +17,23 @@
       state: tail_fox_prime
     - sprite: Imperial/Other/HairAndTail/fox_part.rsi
       state: tail_fox_second
+
+- type: marking
+  id: CatTailStripes
+  bodyPart: Tail
+  markingCategory: Tail
+  speciesRestriction: [Human]
+  coloring:
+    default:
+      type:
+        !type:CategoryColoring
+        category: Hair
+      fallbackTypes:
+        - !type:CategoryColoring
+          category: FacialHair
+        - !type:SkinColoring
+  sprites:
+    - sprite: Corvax/Mobs/Customization/cat_parts.rsi
+      state: tail_cat_wag_stripes_prime
+    - sprite: Corvax/Mobs/Customization/cat_parts.rsi
+      state: tail_cat_wag_stripes_second
