--- a/Resources/Prototypes/Hydroponics/randomMutations.yml
+++ b/Resources/Prototypes/Hydroponics/randomMutations.yml
@@ -162,7 +162,7 @@
         targetValue: TurnIntoKudzu
     - name: ChangeScreaming
       baseOdds: 0.036
-      persists: true # Imperial PlantsAnalyzer (false -> true)
+      persists: false 
       effect: !type:PlantChangeStat
         targetValue: CanScream
     - name: ChangeChemicals
