--- a/Resources/Prototypes/Recipes/Crafting/Graphs/artifact.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/artifact.yml
@@ -6,7 +6,7 @@
     edges:
     - to: done
       steps:
-      - material: фрагмент артефакта
+      - material: ArtifactFragment
         amount: 4
         doAfter: 5
   - node: done
