--- a/Resources/Prototypes/SoundCollections/lobby.yml
+++ b/Resources/Prototypes/SoundCollections/lobby.yml
@@ -3,7 +3,7 @@
   files:
     - /Audio/Lobby/thunderdome.ogg
     - /Audio/Lobby/absconditus.ogg
-    # - /Audio/Lobby/space_asshole.ogg Убрано для соблюдения авторских прав и лицензии
+    # - /Audio/Lobby/space_asshole.ogg # Убрано для соблюдения авторских прав и лицензии Imperial Space
     - /Audio/Lobby/endless_space.ogg
     - /Audio/Lobby/singuloose.ogg
     - /Audio/Lobby/comet_haley.ogg
