--- a/Resources/Prototypes/Entities/Mobs/Player/ShuttleRoles/roles.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/ShuttleRoles/roles.yml
@@ -225,7 +225,7 @@
       sprite: Markers/jobs.rsi
       state: doctor
     - type: RandomHumanoidSpawner
-      settings: VisitorMedicalDocto
+      settings: VisitorMedicalDoctor
 
 - type: entity
   id: RandomHumanoidVisitorParamedic
