--- a/Resources/Prototypes/Imperial/DeadSector/medicine/medipens.yml
+++ b/Resources/Prototypes/Imperial/DeadSector/medicine/medipens.yml
@@ -8,13 +8,13 @@
   - type: Sprite
     sprite: Imperial/DeadSector/items/Medical/medipens.rsi
     layers:
-    - state: firstaid
+    - state: antirad
       map: [ "enum.SolutionContainerLayers.Fill" ]
   - type: Appearance
   - type: SolutionContainerVisuals
     maxFillLevels: 1
     changeColor: false
-    emptySpriteName: hypovolemic_empty
+    emptySpriteName: antirad_empty
   - type: Hypospray
     solutionName: pen
     transferAmount: 6
