few changes for spiderclan

--- a/Resources/Prototypes/Imperial/SpiderClan/Misc/loadouts.yml
+++ b/Resources/Prototypes/Imperial/SpiderClan/Misc/loadouts.yml
@@ -4,6 +4,7 @@
   equipment:
     jumpsuit: JumpsuitNinja
     back: GreenBackpackNinja
+    suitstorage: OxygenTankFilled
     shoes: GreenShoesSpaceNinja
     mask: GreenMaskNinja
     head: GreenHelmetSpaceNinja
@@ -33,6 +34,7 @@
   equipment:
     jumpsuit: JumpsuitNinja
     back: GreenBackpackNinja
+    suitstorage: OxygenTankFilled
     shoes: GreenShoesSpaceNinja
     mask: GreenMaskNinja
     head: GreenAltHelmetSpaceNinja
@@ -63,6 +65,7 @@
   equipment:
     jumpsuit: JumpsuitNinja
     back: RedBackpackNinja
+    suitstorage: OxygenTankFilled
     shoes: RedShoesSpaceNinja
     mask: RedMaskNinja
     head: RedHelmetSpaceNinja
@@ -92,6 +95,7 @@
   equipment:
     jumpsuit: JumpsuitNinja
     back: RedBackpackNinja
+    suitstorage: OxygenTankFilled
     shoes: RedShoesSpaceNinja
     mask: RedMaskNinja
     head: RedAltHelmetSpaceNinja
@@ -122,6 +126,7 @@
   equipment:
     jumpsuit: JumpsuitNinja
     back: BlueBackpackNinja
+    suitstorage: OxygenTankFilled
     shoes: BlueShoesSpaceNinja
     mask: BlueMaskNinja
     head: BlueHelmetSpaceNinja
@@ -151,6 +156,7 @@
   equipment:
     jumpsuit: JumpsuitNinja
     back: BlueBackpackNinja
+    suitstorage: OxygenTankFilled
     shoes: BlueShoesSpaceNinja
     mask: BlueMaskNinja
     head: BlueAltHelmetSpaceNinja
