--- a/Resources/Prototypes/Imperial/Other/TFG/Toughguys/plushie_spawner.yml
+++ b/Resources/Prototypes/Imperial/Other/TFG/Toughguys/plushie_spawner.yml
@@ -33,5 +33,6 @@
         - PlushieCoroner
         - PlushieIAA
         - PlushieAdri
+        - PlushieHlimmy
       chance: 0.75
       offset: 0.10
