--- a/Resources/Prototypes/Entities/Mobs/Customization/Markings/cat_parts.yml
+++ b/Resources/Prototypes/Entities/Mobs/Customization/Markings/cat_parts.yml
@@ -1,7 +1,7 @@
 - type: marking
   id: CatEars
-  bodyPart: Special
-  markingCategory: Special
+  bodyPart: HeadTop
+  markingCategory: HeadTop # Imperial Hair And Tail
   speciesRestriction: [Human]
   coloring:
     default:
