--- a/Resources/Prototypes/Entities/Mobs/Customization/Markings/cat_parts.yml
+++ b/Resources/Prototypes/Entities/Mobs/Customization/Markings/cat_parts.yml
@@ -1,6 +1,6 @@
 - type: marking
   id: CatEars
-  bodyPart: HeadTop
+  bodyPart: HeadTop # Imperial Hair And Tail
   markingCategory: HeadTop # Imperial Hair And Tail
   speciesRestriction: [Human]
   coloring:
