Возвращение водолазок в лодаут капитана

--- a/Resources/Prototypes/Loadouts/Jobs/Command/captain.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Command/captain.yml
@@ -148,4 +148,14 @@
   equipment:
     back: CapSheriffbackpack
 
+- type: loadout
+  id: ClothingUniformJumpsuitCaptainAlt
+  equipment:
+    jumpsuit: ClothingUniformJumpsuitCaptainAlt
+
+- type: loadout
+  id: ClothingUniformJumpskirtCaptainAlt
+  equipment:
+    jumpsuit: ClothingUniformJumpskirtCaptainAlt
+
 # Imperial Captain Loadouts End
