--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -116,6 +116,8 @@
   - ClothingUniformJumpskirtWhiteCaptain
   - ClothingUniformJumpsuitWhiteCaptain
   - ClothingUniformJumpsuitSheriffCaptain
+  - ClothingUniformJumpsuitCaptainAlt
+  - ClothingUniformJumpskirtCaptainAlt
   # Imperial Captain Loadouts End
 
 - type: loadoutGroup
